--- a/src/components/weatherSection/WeatherSection.module.css
+++ b/src/components/weatherSection/WeatherSection.module.css
@@ -5,18 +5,21 @@
 	justify-content: center;
 }
 
-.searchBlock {
+.weatherSection__searchBlock {
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-  background-color:rgb(72,72,74,0.1);
+	background-color: rgb(72, 72, 74, 0.1);
 	margin-bottom: 40px;
 }
 
-.searchBlockContainer {
+.weatherSection__searchBlockContainer {
 	width: 60%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
+
+
+
